--- a/styles/PublishedCodeEditor.module.scss
+++ b/styles/PublishedCodeEditor.module.scss
@@ -28,7 +28,9 @@
 .editor-wrapper {
   box-shadow: 0px 4px 16px #edece9;
   border-radius: 8px;
-  width: 100%;
+  // width: 100%;
+  width: 51vw;
+  margin-right: 3vw;
   height: 96vh;
   position: sticky;
   top: 2vh;
